webbookmarksd needs to use the same AppCache directory as MobileSafari https://bugs.webkit.org/show_bug.cgi?id=159912 Source/WebCore:

Reviewed by Alexey Proskuryakov.

No new tests.  This only changes behavior for webbookmarksd.

* platform/RuntimeApplicationChecks.h:
* platform/RuntimeApplicationChecks.mm:
(WebCore::IOSApplication::isWebBookmarksD): Added.

Source/WebKit2:

<rdar://problem/27056844>

Reviewed by Alexey Proskuryakov.

* UIProcess/API/Cocoa/APIWebsiteDataStoreCocoa.mm:
(API::WebsiteDataStore::defaultApplicationCacheDirectory):
Make webbookmarksd match MobileSafari by adding a matching runtime exception.



Canonical link: https://commits.webkit.org/178076@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203392 268f45cc-cd09-0410-ab3c-d52691b4dbfc