Source/WebKit2/UIProcess/API/Cocoa/APIWebsiteDataStoreCocoa.mm
@@ -40,9 +40,9 @@ String WebsiteDataStore::defaultApplicationCacheDirectory()
 #if PLATFORM(IOS)
     // This quirk used to make these apps share application cache storage, but doesn't accomplish that any more.
     // Preserving it avoids the need to migrate data when upgrading.
-    // FIXME: Ideally we should just have Safari and WebApp create a data store with
+    // FIXME: Ideally we should just have Safari, WebApp, and webbookmarksd create a data store with
     // this application cache path, but that's not supported as of right now.
-    if (WebCore::IOSApplication::isMobileSafari() || WebCore::IOSApplication::isWebApp()) {
+    if (WebCore::IOSApplication::isMobileSafari() || WebCore::IOSApplication::isWebApp() || WebCore::IOSApplication::isWebBookmarksD()) {
         NSString *cachePath = [NSHomeDirectory() stringByAppendingPathComponent:@"Library/Caches/com.apple.WebAppCache"];
 
         return WebKit::stringByResolvingSymlinksInPath(cachePath.stringByStandardizingPath);
